# mdmd

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md  ROUGH_IDEA.md  dist-workspace.toml  justfile
.beads/: issues.jsonl
.beads/.br_history/: issues.20260310_043423_700218362.jsonl  issues.20260310_043423_899956142.jsonl  issues.20260310_043424_097986078.jsonl  issues.20260310_043424_350969965.jsonl  issues.20260310_043424_715615463.jsonl  issues.20260310_043425_075061504.jsonl  issues.20260310_043425_442313290.jsonl  issues.20260310_043425_806662037.jsonl  issues.20260310_043426_175883958.jsonl  issues.20260310_043426_540999269.jsonl  issues.20260310_043426_902435172.jsonl  issues.20260310_043427_270565193.jsonl  issues.20260310_043427_655818297.jsonl  issues.20260310_043428_021856180.jsonl  issues.20260310_043428_405672038.jsonl  issues.20260310_043428_772455169.jsonl  issues.20260310_043429_150347855.jsonl  issues.20260310_043429_533449822.jsonl  issues.20260310_043429_913083406.jsonl  issues.20260310_043430_293752945.jsonl  issues.20260310_043430_669913070.jsonl  issues.20260310_043431_056509101.jsonl  issues.20260310_043431_447152248.jsonl  issues.20260310_043431_835844250.jsonl  issues.20260310_043432_226506838.jsonl  issues.20260310_043432_607430479.jsonl  issues.20260310_043432_997140582.jsonl  issues.20260310_043433_385374492.jsonl  issues.20260310_043815_965157332.jsonl  issues.20260310_044329_408112025.jsonl  issues.20260310_044337_542496076.jsonl  issues.20260310_044337_999889691.jsonl  issues.20260310_044338_400442520.jsonl  issues.20260310_044338_825544390.jsonl  issues.20260310_044339_225980651.jsonl  issues.20260310_044339_650655734.jsonl  (+75 more)
.claude/: settings.json
docs/: serve-semantics.md
planning/: claude-plan-v1.md  codex-plan-v1.md  synthesis-notes.md  synthesized-plan-v1.md  synthesized-plan-v2.md
playground/: README.md  code.md  deep-headings.md  frontmatter.md  links.md  mermaid.md  tables.md  tasks.md  typography.md
src/: backlinks.rs  frontmatter.rs  html.rs  html_export.rs  main.rs  parse.rs  render.rs  serve.rs  web_assets.rs
src/assets/: mdmd.js  (+1 more)
tests/: e2e_serve_navigation.sh  e2e_yaml_frontmatter.sh  serve_integration.rs
(+25 files in other folders)
