[package]
name = "mdmd"
version = "0.1.0"
edition = "2021"
description = "A TUI markdown viewer and navigator"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
pulldown-cmark = "0.12"
ratatui = "0.30"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
