[package]
name = "mdmd"
version = "0.1.0"
edition = "2021"
description = "A TUI markdown viewer and navigator"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive"] }
comrak = { version = "=0.35.0", default-features = false }
crossterm = "0.29"
pulldown-cmark = "0.12"
ratatui = "0.30"
serde_json = "1"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "signal", "macros", "fs"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
