[package]
name = "mdmd"
version = "0.2.2"
edition = "2021"
description = "A TUI markdown viewer and navigator"
repository = "https://github.com/schpet/mdmd"
homepage = "https://github.com/schpet/mdmd"
license = "MIT"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive"] }
comrak = { version = "=0.35.0", default-features = false }
crossterm = "0.29"
httpdate = "1"
pulldown-cmark = "0.12"
ratatui = "0.30"
serde_json = "1"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "signal", "macros", "fs"] }
tower-http = { version = "0.6", features = ["compression-gzip", "compression-br"] }

[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
httpdate = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip", "brotli"] }
tempfile = "3"
